# loom

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  loom.lua  premake5.lua
include/loom/: Dummy.h  Exports.h  Group.h  Loom.h  MapReduce.h
loom/: CMakeLists.txt
loom/include/loom/: Exports.h  Group.h  Loom.h  MapReduce.h
loom/src/loom/: Group.cpp  Loom.cpp
projects/gmake/: Makefile  loom.make  mn.make  unittest.make
projects/vs2017/: loom.sln  mn.vcxproj  mn.vcxproj.filters  unittest.vcxproj
src/loom/: Dummy.cpp  Group.cpp  Loom.cpp
unittest/: CMakeLists.txt  premake5.lua
unittest/src/: unittest_loom.cpp
